--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,12 +11,12 @@
     <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.niyo.reader.app.GroupListFragment"
+        android:name="com.niyo.reader.app.ChannelsListFragment"
         android:id="@+id/feeds_list_frag"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-    <FrameLayout android:id="@+id/details" android:layout_weight="1"
+    <FrameLayout android:id="@+id/feeds_list_layout" android:layout_weight="1"
         android:layout_width="0px" android:layout_height="match_parent"
         android:background="?android:attr/detailsElementBackground" />
 </RelativeLayout>
