--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     <fragment
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:name="com.niyo.reader.app.GroupListFragment"
+        android:name="com.niyo.reader.app.ChannelsListFragment"
         android:id="@+id/feeds_list_frag"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
